0.06
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.

0.05 2017-12-25T16:29:54+01:00
 - Add information about hex_length in doc.
 - Fix running of author tests.
 - Fix test of Brahmi block in Perl lesser than 5.14.0.
 - Fix test comments.

0.04 2017-12-19T14:12:57+01:00
 - Add SEE ALSO section to Unicode::Block doc.
 - Add SEE ALSO section to Unicode::Block::Item doc.
 - Fix test 09-width.t for C locale.
 - Rewrite tests to author tests.
 - Rewrite unassigned unicode character to '' (blank space).
 - Update Module::Install to 1.18 version.
 - Update author name.
 - Update copyright years.

0.03 2014-08-26T03:04:50+02:00
 - Add minimal version of Perl.
 - Add tests.

0.02 2014-08-20T09:05:16+02:00
 - Fix dependency to Class::Utils 0.06 version.

0.01 2014-08-20T07:36:40+02:00
 - First version.