@@ -185,7 +185,8 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-BSD license.
+ © 2013-2017 Michal Josef Špaček
+ BSD 2-Clause License
 
 =head1 VERSION
 
