@@ -87,7 +87,8 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD license.
+     © 2013-2017 Michal Josef Špaček
+     BSD 2-Clause License
 
 VERSION
     0.06
